added generic font backup

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,7 +22,7 @@ body,
 
 body {
 	font-size: 14px;
-	font-family: "Public Sans";
+	font-family: "Public Sans", sans-serif;
 }
 a {
 	transition: all 300ms ease-in-out;
