layout tweaks and links

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,15 @@ body,
 	height: 100%;
 }
 
+#root {
+	display: flex;
+	flex-direction: column;
+}
+
+main {
+	flex-grow: 1;
+}
+
 body {
 	font-size: 14px;
 	font-family: "Public Sans", sans-serif;
